--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reportportal/agent-js-cypress",
-  "version": "5.0.1",
+  "version": "5.0.3",
   "description": "This agent helps Cypress to communicate with Report Portal",
   "main": "index.js",
   "scripts": {
@@ -22,15 +22,15 @@
     "url": "https://github.com/reportportal/agent-js-cypress"
   },
   "dependencies": {
-    "@reportportal/client-javascript": "^5.0.0",
+    "@reportportal/client-javascript": "^5.0.3",
     "glob": "7.1.3",
     "minimatch": "^3.0.4",
-    "mocha": "7.0.1",
+    "mocha": "^8.2.1",
     "node-ipc": "9.1.1"
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "cypress": "^4.0.2",
+    "cypress": "^6.4.0",
     "eslint": "6.5.1",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-prettier": "6.9.0",
